tests/rascal/negative/name_errors/L3/7_dupl-proc.ob
MODULE Bla;
VAR x: INTEGER;
PROCEDURE F();
BEGIN
  x := 1
END F;
PROCEDURE F();
BEGIN
  x := 1
END F;

BEGIN
  F(3)
END Bla.